# mid-term-exam

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXAM.md  README.md  app.py  install.sh  pre-req-check.sh  pyproject.toml  status-dashboard.conf
templates/: index.html
