[project]
name = "status-dashboard"
version = "0.1.0"
description = "Internal status dashboard service"
authors = [
    {name = "Liad Binyamin",email = "liad.binyaminn@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "flask (==3.0.3)",
    "python-dotenv (==1.2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
